--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
 </head>
 <body>
     <h1>Etch-A-Sketch</h1>
+    <div class="size-options">
+        <label for="size">Enter a size between 20 and 100:</label>
+        <input type="number" id="size" min="20" max="100" />
+        <button id="apply">Apply</button>
+    </div>
 
     <div id="container"></div>
 
